# CornerCrop

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: large-library-watermark-runbook.md  open-source-release-checklist.md  privacy-and-local-data.md
scripts/: audit_library_cornercrop.py  start_library_cornercrop.sh  start_non_corner_recovery.sh  watch_library_cornercrop.py  watch_non_corner_recovery.py
src/cornercrop/: __init__.py  batch.py  cli.py  cropper.py  detector.py  library_runner.py  models.py  non_corner_recovery.py  pipeline.py
tests/: test_cropper.py
